run and met: ImportError: No module named triqs_cthyb

--- a/TRIQSTutorialsPython/04-IPT_and_DMFT.ipynb
+++ b/TRIQSTutorialsPython/04-IPT_and_DMFT.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -47,10 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# VERSION 1\n",
@@ -76,8 +72,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -129,10 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters of the model\n",
@@ -150,8 +142,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -171,10 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -193,6 +181,13 @@
     "    # Get the real-axis G with the the Pade analytical continuation\n",
     "    # Plot the spectral function"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -201,20 +196,9 @@
    "language": "python",
    "name": "python2"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
+   "autoclose": false,
    "autocomplete": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
