--- a/TRIQSTutorialsPython/10-Two-orbital_Hubbard_with_CTQMC.ipynb
+++ b/TRIQSTutorialsPython/10-Two-orbital_Hubbard_with_CTQMC.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -39,8 +37,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -60,8 +56,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -77,17 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named triqs_cthyb",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2559b3206fa2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpytriqs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moperators\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpytriqs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marchive\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtriqs_cthyb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSolver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mitertools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mproduct\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named triqs_cthyb"
+     ]
+    }
+   ],
    "source": [
     "# %load run_two_bands.py\n",
     "from pytriqs.gf import *\n",
@@ -173,8 +176,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -186,11 +187,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "half-U1.00-J0.00.h5   half-U6.00-J0.00.h5      quarter-U2.00-J0.00.h5\r\n",
+      "half-U1.00-J0.10.h5   half-U6.00-J0.60.h5      quarter-U2.00-J0.20.h5\r\n",
+      "half-U1.00-J0.20.h5   half-U6.00-J1.20.h5      quarter-U2.00-J0.40.h5\r\n",
+      "half-U10.00-J0.00.h5  half-U7.00-J0.00.h5      quarter-U3.00-J0.00.h5\r\n",
+      "half-U10.00-J1.00.h5  half-U7.00-J0.70.h5      quarter-U3.00-J0.30.h5\r\n",
+      "half-U10.00-J2.00.h5  half-U7.00-J1.40.h5      quarter-U3.00-J0.60.h5\r\n",
+      "half-U11.00-J0.00.h5  half-U8.00-J0.00.h5      quarter-U4.00-J0.00.h5\r\n",
+      "half-U11.00-J1.10.h5  half-U8.00-J0.80.h5      quarter-U4.00-J0.40.h5\r\n",
+      "half-U11.00-J2.20.h5  half-U8.00-J1.60.h5      quarter-U4.00-J0.80.h5\r\n",
+      "half-U12.00-J0.00.h5  half-U9.00-J0.00.h5      quarter-U5.00-J0.00.h5\r\n",
+      "half-U12.00-J1.20.h5  half-U9.00-J0.90.h5      quarter-U5.00-J0.50.h5\r\n",
+      "half-U12.00-J2.40.h5  half-U9.00-J1.80.h5      quarter-U5.00-J1.00.h5\r\n",
+      "half-U2.00-J0.00.h5   quarter-U1.00-J0.00.h5   quarter-U6.00-J0.00.h5\r\n",
+      "half-U2.00-J0.20.h5   quarter-U1.00-J0.10.h5   quarter-U6.00-J0.60.h5\r\n",
+      "half-U2.00-J0.40.h5   quarter-U1.00-J0.20.h5   quarter-U6.00-J1.20.h5\r\n",
+      "half-U3.00-J0.00.h5   quarter-U10.00-J0.00.h5  quarter-U7.00-J0.00.h5\r\n",
+      "half-U3.00-J0.30.h5   quarter-U10.00-J1.00.h5  quarter-U7.00-J0.70.h5\r\n",
+      "half-U3.00-J0.60.h5   quarter-U10.00-J2.00.h5  quarter-U7.00-J1.40.h5\r\n",
+      "half-U4.00-J0.00.h5   quarter-U11.00-J0.00.h5  quarter-U8.00-J0.00.h5\r\n",
+      "half-U4.00-J0.40.h5   quarter-U11.00-J1.10.h5  quarter-U8.00-J0.80.h5\r\n",
+      "half-U4.00-J0.80.h5   quarter-U11.00-J2.20.h5  quarter-U8.00-J1.60.h5\r\n",
+      "half-U5.00-J0.00.h5   quarter-U12.00-J0.00.h5  quarter-U9.00-J0.00.h5\r\n",
+      "half-U5.00-J0.50.h5   quarter-U12.00-J1.20.h5  quarter-U9.00-J0.90.h5\r\n",
+      "half-U5.00-J1.00.h5   quarter-U12.00-J2.40.h5  quarter-U9.00-J1.80.h5\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls results_two_bands/"
    ]
@@ -198,8 +228,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -215,8 +243,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -236,20 +262,9 @@
    "language": "python",
    "name": "python2"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
+   "autoclose": false,
    "autocomplete": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
