--- a/TRIQSTutorialsPython/06-Operators.ipynb
+++ b/TRIQSTutorialsPython/06-Operators.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -28,17 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1*c_dag('up',0)\n",
+      "1*c('up',0)\n",
+      "1*c_dag('down',0)\n",
+      "1*c('down',0)\n"
+     ]
+    }
+   ],
    "source": [
     "from pytriqs.operators import c, c_dag, n, Operator # n and Operator will be needed later\n",
     "print c_dag('up',0)\n",
@@ -50,8 +56,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -66,17 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1*c_dag('up',0)*c('up',0)\n"
+     ]
+    }
+   ],
    "source": [
     "print n('up',0)"
    ]
@@ -84,8 +93,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -101,17 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# Should give 0\n",
     "print n('up',0) - c_dag('up',0)*c('up',0)"
@@ -119,17 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1*c_dag('up',0)*c('up',0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Some calculation\n",
     "print n('up',0) - 2 * c_dag('up',0)*c('up',0)"
@@ -137,17 +154,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3*c_dag('down',0)*c('down',0) + -3*c_dag('up',0)*c('up',0) + 4*c_dag('down',0)*c_dag('up',0)*c('up',0)*c('down',0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the parameters\n",
     "U = 4\n",
@@ -161,6 +183,13 @@
     "H -= mu * (n('up',0) + n('down',0))\n",
     "print H"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -169,20 +198,9 @@
    "language": "python",
    "name": "python2"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
+   "autoclose": false,
    "autocomplete": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
