--- a/Advanced/cpp2py/2-TriqsGf.ipynb
+++ b/Advanced/cpp2py/2-TriqsGf.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-12T20:53:18.154334Z",
+     "start_time": "2019-05-12T20:53:18.037335Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes['text/x-c++src'] = {'reg':[/^%%cpp2py/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%reload_ext cpp2py.magic"
    ]
@@ -18,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove 'gf.h5': No such file or directory\r\n"
+     ]
+    }
+   ],
    "source": [
     "!rm gf.h5\n",
     "g = demo(10.0)"
@@ -67,9 +97,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-12T20:53:23.990997Z",
+     "start_time": "2019-05-12T20:53:23.903062Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/                        Group\r\n",
+      "/g_iw                    Group\r\n",
+      "/g_iw/data               Dataset {2000, 1, 1, 2}\r\n",
+      "/g_iw/indices            Group\r\n",
+      "/g_iw/indices/left       Dataset {1}\r\n",
+      "/g_iw/indices/right      Dataset {1}\r\n",
+      "/g_iw/mesh               Group\r\n",
+      "/g_iw/mesh/domain        Group\r\n",
+      "/g_iw/mesh/domain/beta   Dataset {SCALAR}\r\n",
+      "/g_iw/mesh/domain/statistic Dataset {SCALAR}\r\n",
+      "/g_iw/mesh/positive_freq_only Dataset {SCALAR}\r\n",
+      "/g_iw/mesh/size          Dataset {SCALAR}\r\n"
+     ]
+    }
+   ],
    "source": [
     "!h5ls -r gf.h5"
    ]
@@ -95,6 +149,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -110,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15rc1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
