--- a/TRIQSTutorialsPython/04-IPT_and_DMFT.ipynb
+++ b/TRIQSTutorialsPython/04-IPT_and_DMFT.ipynb
@@ -188,6 +188,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -206,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "version": "2.7.15+"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
